[package]
name = "cwiid"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "Rust library for cwiid (Wii remote \"Wiimote\") based on libcwiid-sys bindings"
repository = "https://github.com/RedIODev/Cwiid-rs-api"

[lib]
crate-type= ["rlib"]

[dependencies]
libcwiid-sys = "0.1.5"
lazy_static = "1.4.0"
num-traits = "0.2.15"

[package.metadata.cross.build]
default-target = "armv5te-unknown-linux-gnueabi"

[package.metadata.cross.target.armv5te-unknown-linux-gnueabi]
image = "ghcr.io/cross-rs/armv5te-unknown-linux-gnueabi-cross:local"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 2
strip = true